# RL_for_Mario

./: .gitignore  PROJECT_STRUCTURE.md  README.md  mario_ppo_data_collection_report.md  requirements.txt  requirements_no_torch.txt
docs/: mario_ppo_data_collection_report.md  mario_transformer_todo_list.txt  model_decision_transformer_vs_model_minimind.md
envs/: mario_env.py
minimind/model/: model_minimind.py
model/: __init__.py  model_decision_transformer.py  model_lora.py  model_ppo_actor_critic.py
nes_emulator_gpu/: .gitignore  CMakeLists.txt  CURRENT_STATUS.md  LICENSE  Makefile  README.md  STRUCTURE.md
nes_emulator_gpu/benchmarks/: bench_gpu_batch.cu  bench_gpu_single.cu
nes_emulator_gpu/benchmarks/cpu_baseline/: README.md
nes_emulator_gpu/benchmarks/gpu_profile/: README.md
nes_emulator_gpu/docs/: GPU_BATCH_OPTIMIZATION_SUMMARY.md  GPU_PROFILING_ANALYSIS.md  PPU_API_INTEGRATION_GUIDE.md  PPU_RENDERING_OPTIMIZATIONS_SUMMARY.md  SOA_REFACTORING_SUMMARY.md  gpu_emulator_research.md  gpu_prototype_plan.md  memory_and_tick_optimizations.md  original_todo_list.txt  palette_lookup_optimization.md  ppu_optimization_opportunities.md  reference_impl_choice.md  rendering_architecture_analysis.md  rom_setup_guide.md  sprite_pattern_prefetch_optimization.md  sprite_rendering_necessity_analysis.md  tile_based_rendering_optimization.md
nes_emulator_gpu/phases/phase0_research/: README.md  completion_report.md  tasks.md
nes_emulator_gpu/phases/phase1_cpu/: PHASE1_SUMMARY.md  README.md  progress.md  tasks.md  work_log_001.md  work_log_002.md  work_log_003.md  work_log_004.md  work_log_005.md  work_log_006.md  work_log_007.md  work_log_008.md  work_log_009.md  work_log_template.md
nes_emulator_gpu/phases/phase2_ppu/: README.md  progress.md  task_2_3_simplified.md  tasks.md  work_log_001.md  work_log_002.md  work_log_003.md  work_log_004.md  work_log_004_scroll_optimization.md  work_log_005_task25_nmi_timing.md  work_log_006_task26_integration.md  work_log_template.md
nes_emulator_gpu/phases/phase3_cuda_single/: work_log_001.md
nes_emulator_gpu/phases/phase4_cuda_batch/: work_log_001.md  work_log_002.md  work_log_003.md
nes_emulator_gpu/src/cuda/device/: README.md  cpu_device.cuh  nes_batch_states_soa.h  nes_state.h  ppu_device.cuh
nes_emulator_gpu/src/cuda/host/: nes_batch_gpu.cu  nes_batch_gpu.h  nes_gpu.cu  nes_gpu.h
nes_emulator_gpu/src/cuda/kernels/: README.md  nes_batch_kernel.cu  nes_frame_kernel.cu
nes_emulator_gpu/src/python/: README.md  nes_gpu_py.cu  setup.py
nes_emulator_gpu/src/reference/common/: README.md  mapper0.cpp  mapper0.h  memory.cpp  memory.h  types.h
nes_emulator_gpu/src/reference/cpu/: README.md  addressing.cpp  addressing.h  cpu_6502.cpp  cpu_6502.h  instructions.cpp  instructions.h  opcode_table.cpp  registers.h
nes_emulator_gpu/src/reference/ppu/: README.md  palette.h  ppu.cpp  ppu.h
nes_emulator_gpu/tests/cuda/: test_gpu_batch.cu  test_gpu_single.cu
nes_emulator_gpu/tests/integration/: README.md
nes_emulator_gpu/tests/roms/: README.md
nes_emulator_gpu/tests/unit/: README.md  test_addressing.cpp  test_background.cpp  test_cpu_6502.cpp  test_cpu_registers.cpp  test_cuda.cu  test_instructions.cpp  test_memory.cpp  test_ppu_registers.cpp  test_rendering_integration.cpp  test_scroll_rendering.cpp  test_scrolling.cpp  test_sprites.cpp  test_types.cpp
scripts/mario/: action_check.py  async_vec_env.py  checkdata.py  collect_dt_dataset_from_ppo.py  collect_random_level_eps_rollouts.py  collect_stratified_random_level_rollouts.py  curriculum.py  data_type.py  dt_offline_dataset.py  gpu_vec_env.py  mario_vec_env.py  test_io.py
trained_models/: README.md
trainer/: ppo_buffer.py  train_ppo_async.py  train_ppo_finetune.py  train_pretrain.py
